# collectd-graph-generator

./: .gitignore  .travis.yml  Cargo.toml  EXAMPLES.md  README.md  pre-push.hook
.github/actions-rs/: grcov.yml
.github/workflows/: dev.yml  main.yml  push.yml
src/: cli.yml  config.rs  lib.rs  main.rs  rrdtool.rs
src/memory/: memory.rs  memory_data.rs  memory_plugin.rs  memory_type.rs  mod.rs
src/processes/: mod.rs  processes.rs  processes_data.rs  processes_names.rs  processes_plugin.rs
src/rrdtool/: common.rs  graph_arguments.rs  mod.rs  remote.rs  rrdtool.rs
tests/: common.rs  integration_tests.rs
tests/general/: general_tests.rs  mod.rs
tests/memory/: mod.rs  system_memory_test.rs
tests/memory/data/memory/: memory-buffered.rrd  memory-cached.rrd  memory-free.rrd  memory-slab_recl.rrd  memory-slab_unrecl.rrd  memory-used.rrd
tests/processes/: mod.rs  multiple_processes_common.rs  multiple_processes_local_test.rs  multiple_processes_remote_test.rs
tests/processes/data/: end_timestamp.txt
tests/processes/data/processes-baloo_file/: disk_octets.rrd  file_handles-mapped.rrd  io_octets.rrd  io_ops.rrd  ps_code.rrd  ps_count.rrd  ps_cputime.rrd  ps_data.rrd  ps_pagefaults.rrd  ps_rss.rrd  ps_stacksize.rrd  ps_vm.rrd
tests/processes/data/processes-dolphin/: disk_octets.rrd  file_handles-mapped.rrd  io_octets.rrd  io_ops.rrd  ps_code.rrd  ps_count.rrd  ps_cputime.rrd  ps_data.rrd  ps_pagefaults.rrd  ps_rss.rrd  ps_stacksize.rrd  ps_vm.rrd
tests/processes/data/processes-firefox/: disk_octets.rrd  file_handles-mapped.rrd  io_octets.rrd  io_ops.rrd  (+8 more)
(+132 files in other folders)
