[package]
name = "cgg"
version = "0.1.1"
authors = ["Marcin Twardak <twardakm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
anyhow = "1.0.32"
regex = "1.4.1"
tempfile = "3.0.1"
